@@ -1,3 +1,8 @@
+2009-07-01  Jan de Groot <jgc@archlinux.org>
+  * brasero-2.26.3-1
+	* upstream update
+	* create gconf schemas with the correct gettext domain
+
 2009-04-18  Allan McRae <allan@archlinux.org>
 	* brasero-2.26.1-1
 	* upstream update
